--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,4 @@ node_modules/cache-swap/node_modules/object-assign/index.js
 node_modules/cache-swap/node_modules/object-assign/license
 node_modules/cache-swap/node_modules/object-assign/package.json
 node_modules/cache-swap/node_modules/object-assign/readme.md
+/node_modules/**/*
